--- a/desafio11/public/views_hbs/registro.hbs
+++ b/desafio11/public/views_hbs/registro.hbs
@@ -2,10 +2,10 @@
 <label for="email">email</label>
 <input type="email" name="username" id="email">
 <label for="password">Contraseña</label>
-<input type="text" name="password" id="password">
+<input type="password" name="password" id="password">
 <input type="submit" value="registrarse">
 </form>
-<form action="/log_in" method="get">
+<form action="/login" method="get">
 <input type="submit" value="ingresar">
 </form>
 
